# amplifier-polyglot-demo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
html/: amplifier-polyglot-agent.html  bridge.js  build.py  build.sh  cache-polyfill.js  go_fallback.js  template.html
html/go_wasm/: document_builder.wasm
html/tests/: test_bridge_webllm.py  test_build.py  test_cache_polyfill.py  test_e2e_build.py  test_template_html.py
python/: code_analysis.py
python/tests/: test_code_analysis.py
rust/data-transform/: Cargo.toml
rust/data-transform/src/: lib.rs
rust/wasm-agent/: Cargo.toml
rust/wasm-agent/src/: lib.rs
server/: test-polyglot.sh  test_polyglot.py
server/python-tool/: Dockerfile  amplifier_module_pb2.py  amplifier_module_pb2_grpc.py  server.py
server/python-tool/tests/: test_server.py
typescript/: web-research.ts
