[package]
name = "wasm-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
data-transform = { path = "../data-transform" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
